--- a/index.html
+++ b/index.html
@@ -40,29 +40,29 @@
     </div>
 
     <div class="container1" id="links">
-        <a href="../Flex/Flex.html"><div class="web">
+        <a href="./Works/Flex/Flex.html"><div class="web">
             <div id="flex"></div>
             <h4>Flex</h4>
         </div></a>
-        <a href="../Profolio-22-12-2022/Works/Pong/index.html"><div class="web">
+        <a href="./Works/Pong/index.html"><div class="web">
             <div id="pong"></div>
             <h4>Pong</h4>
         </div></a>
-        <a href="../Pixel/Pixel.html"><div class="web">
+        <a href="./Works/Pixel/Pixel.html"><div class="web">
             <div id="pixel"></div>
             <h4>Pixel</h4>
         </div></a>
-        <a href="../Profolio-22-12-2022/Works/220206 Ocean wave.html"><div class="web">
+        <a href="./Works/220206 Ocean wave.html"><div class="web">
             <div id="oceanWave"></div>
             <h4>Ocean Wave</h4>
         </div></a>
     </div>
     <div class="container2">
-        <a href="../Animation/Moon/Moon.html"><div class="web2">
+        <a href="./Works/Animation/Moon/Moon.html"><div class="web2">
             <div id="moon"></div>
             <h4>Moon Animation</h4>
         </div></a>
-        <a href="../Profolio-22-12-2022/Works/Today's date/date.html"><div class="web2">
+        <a href="./Works/Today's date/date.html"><div class="web2">
             <div id="today"></div>
             <h4>Today's Date</h4>
         </div></a>
