--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div></a>
     </div>
     <div class="container2">
-        <a href="./Works/Animation/Moon/Moon.html"><div class="web2">
+        <a href="./Works/Moon/Moon.html"><div class="web2">
             <div id="moon"></div>
             <h4>Moon Animation</h4>
         </div></a>
